--- a/report/metaheur.tex
+++ b/report/metaheur.tex
@@ -66,6 +66,12 @@ Sylvain \textsc{Lobry}\\
 
 \chapter{Introduction}
 
+\chapter{Algorithms}
+\section{Simulated annealing}
+\section{Genetic programming}
+\section{Tabu search}
+
+\chapter{Benchmarks}
 
 \chapter{Conclusion}
 
