--- a/report/metaheur.tex
+++ b/report/metaheur.tex
@@ -49,7 +49,6 @@
 \emph{Auteurs:}\\
 Loïc \textsc{Bethmont}\\
 Victor \textsc{Lenoir}\\
-Sylvain \textsc{Lobry}\\
 
 \vfill
 
@@ -66,10 +65,31 @@ Sylvain \textsc{Lobry}\\
 
 \chapter{Introduction}
 
-\chapter{Algorithms}
-\section{Simulated annealing}
-\section{Genetic programming}
-\section{Tabu search}
+Une métaheuristique est un algorithme d'optimisation permettant de
+résoudre des problèmes difficiles de manière simple.  Un problème est
+dis difficile quand il est inconcevable de parcourir la totalité de
+l'espace de solutions pour trouver l'optimum global.
+
+
+Les métaheuristiques sont des algorithmes très géneraux et avec un
+haut niveau d'abstraction et peuvent par conséquent être appliquées sur
+un grand nombre de problèmes différents.
+
+
+Ce sont géneralement des méthodes stochastiques itératives qui tentent
+de converger vers un optimum global.
+
+
+Les métaheuristiques sont très utilisées lorsqu'un problème est trop
+complexe pour obtenir une solution analytique ou une autre solution
+algorithmique ou lorsqu'une solution alternative est trop coûteuse ou
+encore lorsqu'on ne connaît pas de méthodes pour résoudre le problème.
+
+\chapter{Algorithmes}
+
+\section{Recuit simulé}
+
+\section{Programmation génétique}
 
 \chapter{Benchmarks}
 
